clean code add upload, delete, get media
