# internal/api/handlers/handlers.go
@@ -2,18 +2,18 @@ package handlers
 
 import (
 	"context"
-	"io"
-	"mime/multipart"
 
+	"github.com/google/uuid"
 	"github.com/hs-zavet/media-storage/internal/app"
 	"github.com/hs-zavet/media-storage/internal/app/models"
 	"github.com/hs-zavet/media-storage/internal/config"
-	"github.com/hs-zavet/tokens"
 	"github.com/sirupsen/logrus"
 )
 
 type App interface {
-	UploadMedia(ctx context.Context, user tokens.AccountData, file io.Reader, fileHeader *multipart.FileHeader, request app.UploadMediaRequest) (models.Media, error)
+	GetMedia(ctx context.Context, resourceID uuid.UUID) (models.Media, error)
+	UploadMedia(ctx context.Context, request app.UploadMediaRequest) (models.Media, error)
+	DeleteMedia(ctx context.Context, request app.DeleteMediaRequest) error
 }
 
 type Handler struct {
